# mcp-aruba-email

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE_SETUP.md  EXAMPLES.md  GUIDA_UTILIZZO_EMAIL.md  QUICK_WINS.md  README.md  README_EN.md  README_IT.md  ROADMAP.md  SMITHERY_PUBLISH_CHECKLIST.md  SOCIAL_MEDIA_POSTS.md  SOLUZIONE_MCP_ARUBA.md  TELEGRAM_BOT.md  TROUBLESHOOTING.md  VSCODE_SETUP.md  demo_list_emails.py  get_last_sent_email.py  pyproject.toml  send_email_script.py  server.json  verify_smithery_ready.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.well-known/mcp/: server-card.json
docs/: MCP_REGISTRY.md  MCP_SMITHERY_PUBLISH.md  VSCODE_EXTENSION.md
src/mcp_aruba/: calendar_client.py  email_client.py  server.py  signature.py  telegram_bot.py
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
